force-app/main/default/objects/Customization__c/fields/Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Items__c</fullName>
    <label>Order Line Items</label>
    <referenceTo>Order_Line_Items__c</referenceTo>
    <relationshipLabel>Customization</relationshipLabel>
    <relationshipName>Customization</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>