force-app/main/default/objects/Customization__c/fields/Passenger_Email__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Email__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger Email</label>
    <type>Text</type>
</CustomField>