force-app/main/default/objects/Customization__c/fields/Quotes_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quotes Sent</label>
    <type>Checkbox</type>
</CustomField>