force-app/main/default/objects/Customization__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>