force-app/main/default/objects/Customization__c/fields/With_held_Amount__c.field-meta.xml
<CustomField>
    <fullName>With_held_Amount__c</fullName>
    <label>With held Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>