force-app/main/default/objects/Customization__c/recordTypes/Arrival_Early.recordType-meta.xml
<RecordType>
    <fullName>Arrival_Early</fullName>
    <active>true</active>
    <label>Arrival Early</label>
</RecordType>