force-app/main/default/objects/Customization__c/recordTypes/Meal.recordType-meta.xml
<RecordType>
    <fullName>Meal</fullName>
    <active>true</active>
    <label>Meal</label>
</RecordType>