force-app/main/default/objects/Customization__c/recordTypes/Tours.recordType-meta.xml
<RecordType>
    <fullName>Tours</fullName>
    <active>true</active>
    <label>Tours</label>
</RecordType>