force-app/main/default/objects/Customization__c/recordTypes/Trip_Dates.recordType-meta.xml
<RecordType>
    <fullName>Trip_Dates</fullName>
    <active>true</active>
    <label>Trip Dates</label>
</RecordType>